bug fixed - modal overlap issue

--- a/admin/assets/css/wpscp-admin.css
+++ b/admin/assets/css/wpscp-admin.css
@@ -3896,6 +3896,7 @@
 */
 #wpscpproFacebookPageAndGroupSelectModal {
   padding: 20px;
+  margin-top: 32px;
 }
 #wpscpproFacebookPageAndGroupSelectModal .modalBody .entry-head {
   color: #fff;
