--- a/admin/assets/sass/layout/_admin.scss
+++ b/admin/assets/sass/layout/_admin.scss
@@ -3283,6 +3283,7 @@
 */
 #wpscpproFacebookPageAndGroupSelectModal {
     padding: 20px;
+    margin-top: 32px;
     .modalBody {
         .entry-head {
             color: #fff;
